workload_conf/destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: bluegreen-dr
  namespace: bluegreen
spec:
  host: bluegreen
  subsets:
  - labels:
      version: v1
    name: v1
