workload_conf/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: istio-ingressgateway
    type: custom
  name: bluegreen-route
  namespace: istio-system
spec:
  host: bluegreen.aro-neu-cluster.openshift.internal
  port:
    targetPort: 8080
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
