workload_conf/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bluegreen-virtualservice
  namespace: bluegreen
spec:
  gateways:
  - bluegreen-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: bluegreen
        port:
          number: 8080
